# TDengine

./: .appveyor.yml  .autocorrectrc  .clang-format  .codecov.yml  .drone.yml  .gitattributes  .gitignore  .gitignore_global  .gitmodules  .lgtm.yml  .mailmap  .pre-commit-config.yaml  .travis.yml  AGENTS.md  BUILD_MACOS.md  CLAUDE.md  CMakeLists.txt  CMakePresets.json  CMakeSettings.json  CMakeUserPresets.json  CODE_OF_CONDUCT-CN.md  CODE_OF_CONDUCT.md  CONAN_MIGRATION.md  CONTRIBUTING-CN.md  CONTRIBUTING.md  Jenkinsfile  Jenkinsfile2  Jenkinsfile_for_doc  README-CN.md  README.md  SECURITY.md  TD-xxx-try-election-with-applied  UNSAFE_FUNCTIONS_REPORT.md  a.txt  ans.md  audit_complete_implementation_summary.md  audit_final_implementation_report.md  audit_implementation_plan.md  audit_implementation_summary.md  azure-pipelines.yml  (+49 more)
contrib/: CMakeLists.txt  addr2line.cmake  crashdump.cmake  crasher.c.in  lzma2.Makefile  lzma2.cmake  lzma2.diff  lzma2_darwin.CMakeLists.txt.cmake  msvcregex.cmake  rocksdb.cmake  taostools.diff  tz.Makefile  wcwidth.cmake  xxhash.Makefile  zlib.diff
contrib/TSZ/: CMakeLists.txt  README.md
contrib/azure-cmake/: CMakeLists.txt
contrib/deps-download/: CMakeCache.txt  CMakeLists.txt
contrib/inc/: RocksDB.cmake.inc
contrib/lemon/: CMakeLists.txt  lemon.c  lempar.c
contrib/libaes/: CMakeLists.txt
contrib/libmqtt/: CMakeLists.txt
contrib/test/: CMakeLists.txt
contrib/xml2-cmake/: CMakeLists.txt
docs/doxgen/: CMakeLists.txt  scratch.md  taosgen_config.md  vnode_write.md
example/: CMakeLists.txt
example/src/: demoapi.c  tmq.c  tstream.c
examples/c/: CMakeLists.txt  api_with_reqid_test.c  apitest.c  asyncdemo.c  clientcfgtest-taosd.c  clientcfgtest-wrongjson.c  clientcfgtest-wrongvalue.c  connect_two_cluster.c  demo.c  demoapi.c  epoll.c  insert_stb.c  makefile  parameter-binding.c  prepare.c  schemaless.c  sqlperf.c  stream.c  stream_demo.c  subscribe.c  tmq.c  tmq_taosx.c  tqdemo.c
examples/rust/: Cargo.toml  wrapper.h
plugins/incremental_bitmap/: .gitignore  CMakeLists.txt  CMakeLists_debug.txt  quick_test.sh  run_real_tests.sh  run_tests.sh  setup_tdengine_test.sh
source/client/: CMakeLists.txt
source/common/: CMakeLists.txt
source/libs/: CMakeLists.txt
source/os/: CMakeLists.txt
source/thinClient/: CMakeLists.txt
source/util/: CMakeLists.txt
src/: CMakeLists.txt
src/balance/: CMakeLists.txt
src/cache/: CMakeLists.txt
src/client/: CMakeLists.txt
src/common/: CMakeLists.txt
src/connector/: grafana-pluain-is-removed-from-TDengine.md
src/cq/: CMakeLists.txt
src/dnode/: CMakeLists.txt
src/inc/: .fuse_hidden0000e2ae00000244  dnode.h  hash.h  hashutil.h  http.h  ihash.h  lz4.h  mgmt.h  mnode.h  module.h  monitor.h  mpeer.h  mqtt.h  qpercentile.h  query.h  sdb.h  sql.y  taccount.h  tacct.h  tadmin.h  taos.h  taosdef.h  taoserror.h  taosmsg.h  tast.h  tbalance.h  tbn.h  tcache.h  tcluster.h  tcq.h  textbuffer.h  tfs.h  tglobalcfg.h  tgrant.h  thistogram.h  tidpool.h  tinterpolation.h  tkey.h  tlog.h  tlosertree.h  (+28 more)
src/kit/: CMakeLists.txt
src/mnode/: CMakeLists.txt
src/modules/: CMakeLists.txt
src/os/: CMakeLists.txt
src/plugins/: CMakeLists.txt
src/query/: CMakeLists.txt
src/raft/: CMakeLists.txt
src/rpc/: CMakeLists.txt
src/sdb/: CMakeLists.txt
src/sync/: CMakeLists.txt
src/system/: CMakeLists.txt
src/tfs/: CMakeLists.txt
src/tkv/: CMakeLists.txt
src/tsdb/: CMakeLists.txt
src/util/: CMakeLists.txt
src/vnode/: CMakeLists.txt
src/wal/: CMakeLists.txt
test/: 37719.txt  README.md  _debug_s58.py  _debug_s63.py  _debug_show.py  conftest.py  data1.csv  data2.csv  data3-1.csv  data3-2.csv  data3-3.csv  data3.csv  dataMoreThan4096.py  dump_result.txt  insert_res.txt  insert_res_mix.txt  migrate_case.py  mkdocs.yml  my_case.task  output.tmp  pyproject.toml  pytest.ini  pytest.sh  requirements.txt  run_tests.sh  screenlog.0  sdb.json  setenv.sh  setenv_build.sh  setenv_install.sh  start_run_test_list.sh  stop_run_test_list.sh  taoskLog.0  temp_explain_tsorder.result  temp_test_func_multires.result  temp_test_vctable_select_test_function.result  temp_test_vstable_select_test_function.result  temp_test_vtable_meta.result  temp_test_vtable_select_test_function.result  test.py  (+2 more)
test/cases/: test-rust-mirror.sh
test/ci/: 2  cases-1.task  cases-list.txt  cases.task  cases_others.task  cases_test.task  cases_win.task  checkAsan.sh  check_void.sh  container_build.sh  container_build_newmachine.sh  count_assert.py  coverage.txt  failed-cases.task  filter_for_return_values  func.txt  gen_balanced_tasks.py  m.json  optimize_allocation.py  pytest.sh  run.sh  run_case.sh  run_check_assert_container.sh  run_check_void_container.sh  run_container.sh  run_coverage_container.sh  run_coverage_diff.sh  run_optimized.sh  run_scan_container.sh  run_thread.sh  run_upgrade_compat.sh  run_upgrade_compat_container.sh  run_win_cases.py  scan_file_path.py  scan_forbidden_fun.sh  streamlist_for_ci.task  tdengine_coveage_alarm.py  tdgpt_cases.task  test-result-3.0.txt  test_cases.task  (+3 more)
test/docs/: index.md
test/env/: ci_default.yaml  default.yaml  demo.yaml  env_init.yaml  taos_config.yaml  taosadapter_config.yaml  taoskeeper_config.yaml
test/new_test_framework/: __init__.py
test/parallel_test/: cases.task  run.sh  run_case.sh  run_container.sh
test/taostest/: main.py
test/test_logs/: case_result.txt
test/tools/: gdb.sh  run_test_list.sh  streamlist.txt  streamlist_for_ci.task  tmux.conf
test/utils/: __init__.py  before_test.py  log.py  sql.py  taos_components.py
tests/: CMakeLists.txt  How-To-Run-Test-And-How-To-Add-New-Test-Case.md  Jenkinsfile  README-CN.md  README.md  get_catalog.py  mkdocs.yml  requirements.txt  run_all_ci_cases.sh  run_local_coverage.sh  run_local_coverage_only_branch.sh  run_workflow_coverage.sh  run_workflow_coverage_2.sh  setup-lcov.sh  test-CI.sh  test-all.sh
tests/army/: client.c  insert_res.txt  loop.sh  output.txt  pytest.sh  server.c  simpletest.bat  temp_test_vctable_select_test_function.result  test.py  win-test-file  (+1 more)
tests/c/: bm.c  (+2 more)
tools/: CMakeLists.txt
(+22184 files in other folders)
