CMAKE_MINIMUM_REQUIRED(VERSION 2.8)
PROJECT(TDengine)

ADD_SUBDIRECTORY(os)
ADD_SUBDIRECTORY(util)
ADD_SUBDIRECTORY(rpc)
ADD_SUBDIRECTORY(client)
ADD_SUBDIRECTORY(kit)
ADD_SUBDIRECTORY(modules)
ADD_SUBDIRECTORY(sdb)
ADD_SUBDIRECTORY(mnode)
ADD_SUBDIRECTORY(dnode)
ADD_SUBDIRECTORY(vnode)
ADD_SUBDIRECTORY(connector/jdbc)
