[project]
name = "test"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "asyncssh>=2.20.0",
    "certifi==2025.1.31",
    "charset-normalizer==2.0.12",
    "colorama==0.4.4",
    "coverage==7.6.12",
    "distro>=1.9.0",
    "execnet==2.1.1",
    "idna==3.10",
    "iniconfig==2.0.0",
    "iso8601==1.0.2",
    "packaging==24.2",
    "pluggy==1.5.0",
    "pytest-cov==4.1.0",
    "pytest>=8.3.4",
    "taos-ws-py>=0.6.3",
    "pytest-xdist>=3.6.1",
    "pytz==2025.1",
    "requests==2.32.4",
    "taospy>=2.8.6",
    "tomli==2.2.1",
    "urllib3==2.5.0",
    "pywinrm>=0.5.0",
    "patchwork>=1.0.1",
    "fabric2>=2.7.1",
    "toml>=0.10.2",
    "prometheus-client>=0.21.1",
    "psutil>=7.0.0",
    "apscheduler>=3.11.0",
    "prettytable>=3.15.1",
    "faster-fifo>=1.5.2",
    "threadpool>=1.3.2",
    "pandas>=2.2.3",
    "pyyaml>=6.0.2",
    "python-dotenv>=1.0.1",
    "prometheus-api-client>=0.5.7",
    "faker>=37.0.0",
    "allure-pytest>=2.13.5",
    "pip>=25.0.1",
    "pytest-timeout>=2.3.1",
]
